@@ -1,4 +1,4 @@
-# Error messages with whitespaces in various places (but not '\n' character)
-program&nbsp;name: file&nbsp;name(13,37) data_&nbsp;data&nbsp;block&nbsp;: ERROR, spaces are allowed.
+# Error messages with a whitespace in the file name
+program name: file&nbsp;name(13,37) data_ data block : ERROR, spaces are allowed.
 # This should not be parsed correctly
 program name: file name(13,37) data_data block: ERROR, spaces are allowed.
