@@ -1,2 +1,2 @@
-scripts/msg_parse: tests/cases/msg_parse_003.inp: NOTE, unable to parse error message 'program name&colon; file name(13,37) data_data block&colon; ERROR, spaces are allowed.'.
 program name	file name	13	37	data_ data block 	ERROR	spaces are allowed
+program name	file			name(13,37) data_data block	ERROR	spaces are allowed
